Bug #13966 Cluster: NoOfFragmentLogFiles: set to low error is not handled.
Submitted: 12 Oct 2005 18:16 Modified: 14 Feb 2006 9:29
Reporter: Jonathan Miller
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:4.1, 5.0, 5.1 OS:Linux (Linux)
Assigned to: Jonas Oreland Target Version:

[12 Oct 2005 18:16] Jonathan Miller
Description:
Set NoOfFragmentLogFiles: from 200 to 2 and restarted:

Cluster log:

2005-10-12 18:10:13 [MgmSrvr] INFO     -- Node 5: Start phase 3 completed (system
restart)
2005-10-12 18:10:14 [MgmSrvr] INFO     -- Node 1: Node 5 Connected
2005-10-12 18:10:14 [MgmSrvr] INFO     -- Node 1: Node 8 Connected
2005-10-12 18:10:14 [MgmSrvr] INFO     -- Node 1: Node 6 Connected
2005-10-12 18:10:14 [MgmSrvr] ALERT    -- Node 5: Forced node shutdown completed. Occured
during startphase 4. Initiated by signal 0. Caused by error 2341: 'Internal program error
(failed ndbrequire)(Internal error, programming error or missing error message, please
report a bug). Temporary error
2005-10-12 18:10:14 [MgmSrvr] ALERT    -- Node 8: Forced node shutdown completed. Occured
during startphase 4. Initiated by signal 0. Caused by error 2341: 'Internal program error
(failed ndbrequire)(Internal error, programming error or missing error message, please
report a bug). Temporary error
2005-10-12 18:10:14 [MgmSrvr] ALERT    -- Node 6: Forced node shutdown completed. Occured
during startphase 4. Initiated by signal 0. Caused by error 2341: 'Internal program error
(failed ndbrequire)(Internal error, programming error or missing error message, please
report a bug). Temporary error
2005-10-12 18:10:14 [MgmSrvr] INFO     -- Node 1: Node 9 Connected
2005-10-12 18:10:14 [MgmSrvr] ALERT    -- Node 9: Forced node shutdown completed. Occured
during startphase 4. Initiated by signal 0. Caused by error 2341: 'Internal program error
(failed ndbrequire)(Internal error, programming error or missing error message, please
report a bug). Temporary error

Error logs:
Time: Wednesday 12 October 2005 - 18:10:13
Status: Temporary error, restart node
Message: Internal program error (failed ndbrequire) (Internal error, programming error or
missing error message, please report a bug)
Error: 2341
Error data: DblqhMain.cpp
Error object: DBLQH (Line: 16150) 0x0000000a
Program: /home/ndbdev/jmiller/builds/libexec/ndbd
Pid: 15053
Trace: /space/run/ndb_5_trace.log.1
Version: Version 5.1.2 (a_drop5p5)
***EOM***

Current byte-offset of file-pointer is: 568

Time: Wednesday 12 October 2005 - 18:10:13
Status: Temporary error, restart node
Message: Internal program error (failed ndbrequire) (Internal error, programming error or
missing error message, please report a bug)
Error: 2341
Error data: DblqhMain.cpp
Error object: DBLQH (Line: 16150) 0x0000000a
Program: /home/ndbdev/jmiller/builds/libexec/ndbd
Pid: 15056
Trace: /space/run/ndb_8_trace.log.1
Version: Version 5.1.2 (a_drop5p5)
***EOM***
Time: Wednesday 12 October 2005 - 18:10:13
Status: Temporary error, restart node
Message: Internal program error (failed ndbrequire) (Internal error, programming error or
missing error message, please report a bug)
Error: 2341
Error data: DblqhMain.cpp
Error object: DBLQH (Line: 16150) 0x0000000a
Program: /home/ndbdev/jmiller/builds/libexec/ndbd
Pid: 5550
Trace: /space/run/ndb_6_trace.log.1
Version: Version 5.1.2 (a_drop5p5)
***EOM***

Current byte-offset of file-pointer is: 568

Time: Wednesday 12 October 2005 - 18:10:13
Status: Temporary error, restart node
Message: Internal program error (failed ndbrequire) (Internal error, programming error or
missing error message, please report a bug)
Error: 2341
Error data: DblqhMain.cpp
Error object: DBLQH (Line: 16150) 0x0000000a
Program: /home/ndbdev/jmiller/builds/libexec/ndbd
Pid: 5553
Trace: /space/run/ndb_9_trace.log.1
Version: Version 5.1.2 (a_drop5p5)
***EOM***

Trace Files:
node6:
--------------- Signal ----------------
r.bn: 247 "DBLQH", r.proc: 6, r.sigId: 907877 gsn: 262 "FSREADCONF" prio: 1
s.bn: 253 "NDBFS", s.proc: 6, s.sigId: 907875 length: 1 trace: 0 #sec: 0 fragInf: 0
 UserPointer: 0
node9:
--------------- Signal ----------------
r.bn: 247 "DBLQH", r.proc: 9, r.sigId: 908147 gsn: 262 "FSREADCONF" prio: 1
s.bn: 253 "NDBFS", s.proc: 9, s.sigId: 908145 length: 1 trace: 0 #sec: 0 fragInf: 0
 UserPointer: 0
node8:
--------------- Signal ----------------
r.bn: 247 "DBLQH", r.proc: 8, r.sigId: 905848 gsn: 262 "FSREADCONF" prio: 1
s.bn: 253 "NDBFS", s.proc: 8, s.sigId: 905846 length: 1 trace: 0 #sec: 0 fragInf: 0
 UserPointer: 0
node5:
--------------- Signal ----------------
r.bn: 247 "DBLQH", r.proc: 5, r.sigId: 906377 gsn: 262 "FSREADCONF" prio: 1
s.bn: 253 "NDBFS", s.proc: 5, s.sigId: 906375 length: 1 trace: 0 #sec: 0 fragInf: 0
 UserPointer: 3

How to repeat:
see above
[12 Oct 2005 18:17] Jonathan Miller
correct title
[12 Oct 2005 19:32] Jorge del Conde
I was able to reproduce this using a recent 5.0 clone under FC4
[12 Oct 2005 19:33] Jorge del Conde
I was able to reproduce this using a recent 5.0 clone under FC4
[6 Feb 2006 11:44] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/2178
[7 Feb 2006 6:51] Jonas Oreland
pushed into 5.1.7
[10 Feb 2006 11:35] Jonas Oreland
pushed into 5.0.19
[10 Feb 2006 13:56] Jonas Oreland
pushed into 4.1.19
[14 Feb 2006 9:29] Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

Documented bugfix in 4.1.19, 5.0.19, and 5.1.7 changelogs. Closed.