bug#13966 - ndb   better error message on invalid config change

ndb/src/kernel/blocks/dbdict/Dbdict.cpp:
  fix typo
ndb/src/kernel/blocks/dblqh/DblqhMain.cpp:
  Change error message...note that this is a guess